[gd_scene load_steps=16 format=3 uid="uid://cqunx3u7vu345"]

[ext_resource type="Texture2D" uid="uid://bccuyevp2jp6i" path="res://realBk.png" id="1_pvnej"]
[ext_resource type="FontFile" uid="uid://cxwxnqmhy42aq" path="res://MiriamCLM-Bold.ttf" id="2_8ko10"]
[ext_resource type="Script" path="res://idk.gd" id="2_hvrp8"]
[ext_resource type="Script" path="res://Player.gd" id="3_pipci"]
[ext_resource type="AudioStream" uid="uid://biy7urv6pbte7" path="res://Playerhit.wav" id="4_jc7ll"]
[ext_resource type="Script" path="res://Ball.gd" id="4_lylfp"]
[ext_resource type="Script" path="res://CPU.gd" id="4_m7m6y"]
[ext_resource type="AudioStream" uid="uid://cua7jc4g0x0kt" path="res://Playerscore.wav" id="6_jp7f5"]
[ext_resource type="AudioStream" uid="uid://o8muw2b5j6rp" path="res://Playerow.wav" id="6_ujmfd"]
[ext_resource type="AudioStream" uid="uid://chva0opvsm30u" path="res://Cpuhit.wav" id="6_ygadc"]
[ext_resource type="AudioStream" uid="uid://dyov3hax0vfs1" path="res://Bounce.wav" id="8_w1yxn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqs01"]
size = Vector2(20, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8idsp"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1axn"]
size = Vector2(1152, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twu2h"]
size = Vector2(91, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_pvnej")
centered = false
script = ExtResource("2_hvrp8")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_pipci")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 20.0
offset_bottom = 50.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10.278, -0.767303)
shape = SubResource("RectangleShape2D_tqs01")

[node name="PlayerHitSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("4_jc7ll")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_m7m6y")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -50.0
offset_right = 10.0
offset_bottom = 50.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
shape = SubResource("RectangleShape2D_tqs01")

[node name="CPUHitSound" type="AudioStreamPlayer2D" parent="CPU"]
stream = ExtResource("6_ygadc")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_lylfp")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_8idsp")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -19.5)
shape = SubResource("RectangleShape2D_d1axn")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 667.5)
shape = SubResource("RectangleShape2D_d1axn")

[node name="WallBounceSound" type="AudioStreamPlayer2D" parent="Borders"]
stream = ExtResource("8_w1yxn")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-45.5, 324)
shape = SubResource("RectangleShape2D_twu2h")

[node name="CPUScoreSound" type="AudioStreamPlayer2D" parent="ScoreLeft"]
stream = ExtResource("6_ujmfd")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1198, 324)
shape = SubResource("RectangleShape2D_twu2h")

[node name="PlayerScoreSound" type="AudioStreamPlayer2D" parent="ScoreRight"]
stream = ExtResource("6_jp7f5")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_top = 5.0
offset_right = 480.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("2_8ko10")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 672.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("2_8ko10")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
